--- a/vim.yml
+++ b/vim.yml
@@ -3,6 +3,10 @@
   tasks:
     - name: Install Vim
       homebrew: pkg=vim state=present
+    - name: Install MacVim
+      homebrew: pkg=macvim state=present
+    - name: Link MacVim
+      command: brew linkapps macvim
     - name: Install dotfiles
       git: >
         repo=git@github.com:dbolson/dotvim.git
